--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint",
+    "serve:storybook": "start-storybook -p 6006",
     "start": "npm run serve"
   },
   "dependencies": {
@@ -23,6 +24,15 @@
     "vuex": "^3.5.1"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.6.3",
+    "@mdi/font": "^4.5.95",
+    "@storybook/addon-a11y": "^5.2",
+    "@storybook/addon-actions": "^5.2",
+    "@storybook/addon-knobs": "^5.2",
+    "@storybook/addon-notes": "^5.2",
+    "@storybook/addon-viewport": "^5.2",
+    "@storybook/addons": "^5.2",
+    "@storybook/vue": "^5.2",
     "@types/jest": "^26.0.10",
     "@typescript-eslint/eslint-plugin": "^3.9.0",
     "@typescript-eslint/parser": "^3.9.0",
@@ -38,6 +48,7 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
     "@vue/test-utils": "^1.0.3",
+    "babel-preset-vue": "^2.0.2",
     "eslint": "^7.7.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^6.2.2",
@@ -45,10 +56,14 @@
     "node-sass": "^4.14.1",
     "npm-check-updates": "^7.1.1",
     "prettier": "^2.0.5",
+    "prism-react-renderer": "^0.1.7",
+    "prismjs": "^1.17.1",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.3",
     "typescript": "~3.9.7",
     "vue-cli-plugin-vuetify": "~2.0.7",
+    "vue-cli-plugin-vuetify-storybook": "~0.2.0",
+    "vue-storybook": "^1.1.0",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.6.0"
   },
