--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
+    "test": "npm run test:unit && npm run test:e2e",
     "lint": "vue-cli-service lint",
-    "serve:storybook": "start-storybook -p 6006",
+    "storybook": "start-storybook -p 6006",
     "start": "npm run serve"
   },
   "dependencies": {
@@ -52,6 +53,7 @@
     "eslint": "^7.7.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^6.2.2",
+    "jest-serializer-vue": "^2.0.2",
     "lint-staged": "^10.2.11",
     "node-sass": "^4.14.1",
     "npm-check-updates": "^7.1.1",
