--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "vue-router": "^3.4.3",
     "vuetify": "^2.3.8",
     "vuex": "^3.5.1",
-    "@sentry/browser": "5.21.4"
+    "@sentry/browser": "5.21.4",
+    "@sentry/integrations": "5.21.4"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.6.3",
