--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "start": "npm run serve"
   },
   "dependencies": {
+    "@sentry/browser": "5.21.4",
+    "@sentry/integrations": "5.21.4",
+    "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "highcharts": "^8.1.2",
     "highcharts-vue": "^1.3.5",
@@ -20,12 +23,11 @@
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.5",
+    "vue-clipboard2": "^0.3.1",
     "vue-property-decorator": "^9.0.0",
     "vue-router": "^3.4.3",
     "vuetify": "^2.3.8",
-    "vuex": "^3.5.1",
-    "@sentry/browser": "5.21.4",
-    "@sentry/integrations": "5.21.4"
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.6.3",
