--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "prismjs": "^1.17.1",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.3",
+    "sinon": "^9.0.3",
     "typescript": "~3.9.7",
     "vue-cli-plugin-vuetify": "~2.0.7",
     "vue-cli-plugin-vuetify-storybook": "~0.2.0",
