--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "vue-property-decorator": "^9.0.0",
     "vue-router": "^3.4.3",
     "vuetify": "^2.3.8",
-    "vuex": "^3.5.1"
+    "vuex": "^3.5.1",
+    "form-data": "^3.0.0"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.6.3",
@@ -42,15 +43,15 @@
     "@types/jest": "^26.0.10",
     "@typescript-eslint/eslint-plugin": "^3.9.0",
     "@typescript-eslint/parser": "^3.9.0",
-    "@vue/cli-plugin-babel": "~4.5.3",
-    "@vue/cli-plugin-e2e-cypress": "~4.5.3",
-    "@vue/cli-plugin-eslint": "~4.5.3",
-    "@vue/cli-plugin-pwa": "~4.5.3",
-    "@vue/cli-plugin-router": "~4.5.3",
-    "@vue/cli-plugin-typescript": "~4.5.3",
-    "@vue/cli-plugin-unit-jest": "~4.5.3",
-    "@vue/cli-plugin-vuex": "~4.5.3",
-    "@vue/cli-service": "~4.5.3",
+    "@vue/cli-plugin-babel": "~4.5.4",
+    "@vue/cli-plugin-e2e-cypress": "~4.5.4",
+    "@vue/cli-plugin-eslint": "~4.5.4",
+    "@vue/cli-plugin-pwa": "~4.5.4",
+    "@vue/cli-plugin-router": "~4.5.4",
+    "@vue/cli-plugin-typescript": "~4.5.4",
+    "@vue/cli-plugin-unit-jest": "~4.5.4",
+    "@vue/cli-plugin-vuex": "~4.5.4",
+    "@vue/cli-service": "~4.5.4",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
     "@vue/test-utils": "^1.0.3",
