--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "start": "npm run serve"
   },
   "dependencies": {
+    "@babel/preset-typescript": "^7.10.4",
     "@sentry/browser": "5.21.4",
     "@sentry/integrations": "5.21.4",
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "form-data": "^3.0.0",
     "highcharts": "^8.1.2",
     "highcharts-vue": "^1.3.5",
     "lodash": "^4.17.20",
@@ -27,8 +29,7 @@
     "vue-property-decorator": "^9.0.0",
     "vue-router": "^3.4.3",
     "vuetify": "^2.3.8",
-    "vuex": "^3.5.1",
-    "form-data": "^3.0.0"
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.6.3",
