--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "form-data": "^3.0.0",
     "highcharts": "^8.1.2",
     "highcharts-vue": "^1.3.5",
+    "http-proxy-middleware": "^1.0.5",
     "lodash": "^4.17.20",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
