--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@sentry/integrations": "5.21.4",
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "fork-ts-checker-webpack-plugin": "^5.1.0",
     "form-data": "^3.0.0",
     "highcharts": "^8.1.2",
     "highcharts-vue": "^1.3.5",
     "http-proxy-middleware": "^1.0.5",
     "lodash": "^4.17.20",
     "register-service-worker": "^1.7.1",
+    "tsconfig-paths-webpack-plugin": "^3.3.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.5",
     "vue-clipboard2": "^0.3.1",
@@ -74,6 +76,7 @@
     "typescript": "~3.9.7",
     "vue-cli-plugin-vuetify": "~2.0.7",
     "vue-cli-plugin-vuetify-storybook": "~0.2.0",
+    "vue-loader": "^15.9.3",
     "vue-storybook": "^1.1.0",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.6.0"
