--- a/package.json
+++ b/package.json
@@ -10,43 +10,42 @@
     "test": "npm run test:unit && npm run test:e2e",
     "lint": "vue-cli-service lint",
     "storybook": "start-storybook -p 6006",
-    "start": "npm run serve"
+    "start": "npm run serve",
+    "npm-check": "npm-check -u"
   },
   "dependencies": {
     "@babel/preset-typescript": "^7.10.4",
-    "@sentry/browser": "5.21.4",
-    "@sentry/integrations": "5.21.4",
+    "@sentry/browser": "^5.22.3",
+    "@sentry/integrations": "^5.22.3",
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "fork-ts-checker-webpack-plugin": "^5.1.0",
     "form-data": "^3.0.0",
-    "highcharts": "^8.1.2",
-    "highcharts-vue": "^1.3.5",
     "http-proxy-middleware": "^1.0.5",
     "lodash": "^4.17.20",
     "register-service-worker": "^1.7.1",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
-    "vue": "^2.6.11",
+    "vue": "^2.6.12",
     "vue-class-component": "^7.2.5",
     "vue-clipboard2": "^0.3.1",
     "vue-property-decorator": "^9.0.0",
     "vue-router": "^3.4.3",
-    "vuetify": "^2.3.8",
+    "vuetify": "^2.3.10",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.6.3",
-    "@mdi/font": "^4.5.95",
-    "@storybook/addon-a11y": "^5.2",
-    "@storybook/addon-actions": "^5.2",
-    "@storybook/addon-knobs": "^5.2",
-    "@storybook/addon-notes": "^5.2",
-    "@storybook/addon-viewport": "^5.2",
-    "@storybook/addons": "^5.2",
-    "@storybook/vue": "^5.2",
-    "@types/jest": "^26.0.10",
-    "@typescript-eslint/eslint-plugin": "^3.9.0",
-    "@typescript-eslint/parser": "^3.9.0",
+    "@mdi/font": "^5.5.55",
+    "@storybook/addon-a11y": "^6.0",
+    "@storybook/addon-actions": "^6.0",
+    "@storybook/addon-knobs": "^6.0",
+    "@storybook/addon-notes": "^5.3.21",
+    "@storybook/addon-viewport": "^6.0",
+    "@storybook/addons": "^6.0",
+    "@storybook/vue": "^6.0",
+    "@types/jest": "^26.0.13",
+    "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "@typescript-eslint/parser": "^4.0.1",
     "@vue/cli-plugin-babel": "~4.5.4",
     "@vue/cli-plugin-e2e-cypress": "~4.5.4",
     "@vue/cli-plugin-eslint": "~4.5.4",
@@ -57,28 +56,28 @@
     "@vue/cli-plugin-vuex": "~4.5.4",
     "@vue/cli-service": "~4.5.4",
     "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/eslint-config-typescript": "^5.0.2",
-    "@vue/test-utils": "^1.0.3",
+    "@vue/eslint-config-typescript": "^5.1.0",
+    "@vue/test-utils": "^1.0.5",
     "babel-preset-vue": "^2.0.2",
-    "eslint": "^7.7.0",
+    "eslint": "^7.8.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^6.2.2",
     "jest-serializer-vue": "^2.0.2",
-    "lint-staged": "^10.2.11",
+    "lint-staged": "^10.3.0",
     "node-sass": "^4.14.1",
-    "npm-check-updates": "^7.1.1",
-    "prettier": "^2.0.5",
-    "prism-react-renderer": "^0.1.7",
+    "npm-check": "^5.9.2",
+    "prettier": "^2.1.1",
+    "prism-react-renderer": "^1.1.1",
     "prismjs": "^1.17.1",
     "sass": "^1.26.10",
-    "sass-loader": "^9.0.3",
+    "sass-loader": "^10.0.2",
     "sinon": "^9.0.3",
-    "typescript": "~3.9.7",
+    "typescript": "^4.0.2",
     "vue-cli-plugin-vuetify": "~2.0.7",
     "vue-cli-plugin-vuetify-storybook": "~0.2.0",
     "vue-loader": "^15.9.3",
-    "vue-storybook": "^1.1.0",
-    "vue-template-compiler": "^2.6.11",
+    "vue-storybook": "^1.2.0",
+    "vue-template-compiler": "^2.6.12",
     "vuetify-loader": "^1.6.0"
   },
   "gitHooks": {
