--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@storybook/addons": "^6.0",
     "@storybook/vue": "^6.0",
     "@types/jest": "^26.0.13",
+    "@types/lodash": "^4.14.161",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
     "@vue/cli-plugin-babel": "~4.5.4",
