--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "test": "npm run test:unit && npm run test:e2e",
+    "test": "npm run test:unit",
     "lint": "vue-cli-service lint",
     "storybook": "start-storybook -p 6006",
     "start": "npm run serve",
