--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "vue-cli-service lint",
     "storybook": "start-storybook -p 6006",
     "start": "npm run serve",
-    "npm-check": "npm-check -u"
+    "npm-check": "npm-check -u",
+    "tsc": "tsc"
   },
   "dependencies": {
     "@babel/preset-typescript": "^7.10.4",
