--- a/package.json
+++ b/package.json
@@ -44,15 +44,15 @@
     "@types/lodash": "^4.14.161",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
-    "@vue/cli-plugin-babel": "~4.5.4",
+    "@vue/cli-plugin-babel": "^4.5.11",
     "@vue/cli-plugin-e2e-cypress": "~4.5.4",
     "@vue/cli-plugin-eslint": "~4.5.4",
-    "@vue/cli-plugin-pwa": "~4.5.4",
-    "@vue/cli-plugin-router": "~4.5.4",
-    "@vue/cli-plugin-typescript": "~4.5.4",
+    "@vue/cli-plugin-pwa": "^4.5.11",
+    "@vue/cli-plugin-router": "^4.5.11",
+    "@vue/cli-plugin-typescript": "^4.5.11",
     "@vue/cli-plugin-unit-jest": "~4.5.4",
-    "@vue/cli-plugin-vuex": "~4.5.4",
-    "@vue/cli-service": "~4.5.4",
+    "@vue/cli-plugin-vuex": "^4.5.11",
+    "@vue/cli-service": "^4.5.11",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^1.0.5",
