--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "tsc": "tsc"
   },
   "dependencies": {
-    "@babel/preset-typescript": "^7.10.4",
-    "axios": "^0.20.0",
-    "core-js": "^3.6.5",
-    "fork-ts-checker-webpack-plugin": "^5.1.0",
+    "@babel/preset-typescript": "^7.12.7",
+    "axios": "^0.21.1",
+    "core-js": "^3.8.3",
+    "fork-ts-checker-webpack-plugin": "^6.1.0",
     "form-data": "^3.0.0",
     "http-proxy-middleware": "^1.0.6",
     "lodash": "^4.17.20",
@@ -27,19 +27,19 @@
     "vue": "^2.6.12",
     "vue-clipboard2": "^0.3.1",
     "vue-router": "^3.4.9",
-    "vuetify": "^2.3.10",
-    "vuex": "^3.5.1"
+    "vuetify": "^2.4.3",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.6.3",
-    "@mdi/font": "^5.5.55",
-    "@storybook/addon-a11y": "^6.0",
-    "@storybook/addon-actions": "^6.0",
-    "@storybook/addon-knobs": "^6.0",
+    "@babel/preset-react": "^7.12.10",
+    "@mdi/font": "^5.9.55",
+    "@storybook/addon-a11y": "^6.1.15",
+    "@storybook/addon-actions": "^6.1.15",
+    "@storybook/addon-knobs": "^6.1.15",
     "@storybook/addon-notes": "^5.3.21",
-    "@storybook/addon-viewport": "^6.0",
-    "@storybook/addons": "^6.0",
-    "@storybook/vue": "^6.0",
+    "@storybook/addon-viewport": "^6.1.15",
+    "@storybook/addons": "^6.1.15",
+    "@storybook/vue": "^6.1.15",
     "@types/jest": "^26.0.20",
     "@types/lodash": "^4.14.168",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
@@ -55,23 +55,23 @@
     "@vue/cli-service": "^4.5.11",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
-    "@vue/test-utils": "^1.0.5",
+    "@vue/test-utils": "^1.1.2",
     "babel-preset-vue": "^2.0.2",
     "eslint": "^7.18.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
     "jest-serializer-vue": "^2.0.2",
     "lint-staged": "^10.5.3",
-    "node-sass": "^4.14.1",
+    "node-sass": "^5.0.0",
     "npm-check": "^5.9.2",
     "prettier": "^2.2.1",
     "prism-react-renderer": "^1.1.1",
-    "prismjs": "^1.17.1",
-    "sass": "^1.26.10",
-    "sass-loader": "^10.0.2",
-    "sinon": "^9.0.3",
+    "prismjs": "^1.23.0",
+    "sass": "^1.32.5",
+    "sass-loader": "^10.1.1",
+    "sinon": "^9.2.4",
     "typescript": "^4.1.3",
-    "vue-cli-plugin-vuetify": "~2.0.7",
+    "vue-cli-plugin-vuetify": "^2.0.9",
     "vue-cli-plugin-vuetify-storybook": "~0.2.0",
     "vue-loader": "^15.9.6",
     "vue-storybook": "^1.2.0",
