--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@typescript-eslint/parser": "^4.14.0",
     "@vue/cli-plugin-babel": "^4.5.11",
     "@vue/cli-plugin-e2e-cypress": "~4.5.4",
-    "@vue/cli-plugin-eslint": "~4.5.4",
+    "@vue/cli-plugin-eslint": "^4.5.11",
     "@vue/cli-plugin-pwa": "^4.5.11",
     "@vue/cli-plugin-router": "^4.5.11",
     "@vue/cli-plugin-typescript": "^4.5.11",
@@ -59,7 +59,7 @@
     "babel-preset-vue": "^2.0.2",
     "eslint": "^7.18.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-vue": "^6.2.2",
+    "eslint-plugin-vue": "^7.5.0",
     "jest-serializer-vue": "^2.0.2",
     "lint-staged": "^10.5.3",
     "node-sass": "^5.0.0",
