--- a/package.json
+++ b/package.json
@@ -2,19 +2,16 @@
   "name": "hiscores.shmup.com",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": "16.x"
-  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "test": "npm run test:unit",
     "lint": "vue-cli-service lint",
-    "storybook": "start-storybook -p 6006",
-    "start": "npm run serve",
     "npm-check": "npm-check -u",
+    "start": "npm run serve",
+    "storybook": "start-storybook -p 6006",
+    "test": "npm run test:unit",
     "tsc": "tsc"
   },
   "dependencies": {
@@ -25,6 +22,7 @@
     "form-data": "^3.0.0",
     "http-proxy-middleware": "^1.0.5",
     "lodash": "^4.17.20",
+    "moment": "^2.29.3",
     "register-service-worker": "^1.7.1",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
     "vue": "^2.6.12",
@@ -47,22 +45,25 @@
     "@types/lodash": "^4.14.161",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
-    "@vue/cli-plugin-babel": "~4.5.4",
-    "@vue/cli-plugin-e2e-cypress": "~4.5.4",
-    "@vue/cli-plugin-eslint": "~4.5.4",
-    "@vue/cli-plugin-pwa": "~4.5.4",
-    "@vue/cli-plugin-router": "~4.5.4",
-    "@vue/cli-plugin-typescript": "~4.5.4",
-    "@vue/cli-plugin-unit-jest": "~4.5.4",
-    "@vue/cli-plugin-vuex": "~4.5.4",
-    "@vue/cli-service": "~4.5.4",
+    "@vue/cli-plugin-babel": "^5.0.4",
+    "@vue/cli-plugin-e2e-cypress": "^5.0.4",
+    "@vue/cli-plugin-eslint": "^5.0.4",
+    "@vue/cli-plugin-pwa": "^5.0.4",
+    "@vue/cli-plugin-router": "^5.0.4",
+    "@vue/cli-plugin-typescript": "^5.0.4",
+    "@vue/cli-plugin-unit-jest": "^5.0.4",
+    "@vue/cli-plugin-vuex": "^5.0.4",
+    "@vue/cli-service": "^5.0.4",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.1.0",
     "@vue/test-utils": "^1.0.5",
+    "@vue/vue2-jest": "^27.0.0-alpha.3",
     "babel-preset-vue": "^2.0.2",
+    "cypress": "^8.3.0",
     "eslint": "^7.8.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^6.2.2",
+    "jest": "^27.1.0",
     "jest-serializer-vue": "^2.0.2",
     "lint-staged": "^10.3.0",
     "node-sass": "^4.14.1",
@@ -73,13 +74,17 @@
     "sass": "^1.26.10",
     "sass-loader": "^10.0.2",
     "sinon": "^9.0.3",
+    "ts-jest": "^27.0.4",
     "typescript": "^4.6.4",
-    "vue-cli-plugin-vuetify": "~2.0.7",
+    "vue-cli-plugin-vuetify": "^2.5.0",
     "vue-cli-plugin-vuetify-storybook": "~0.2.0",
     "vue-loader": "^15.9.3",
     "vue-storybook": "^1.2.0",
     "vue-template-compiler": "^2.6.12",
     "vuetify-loader": "^1.6.0"
+  },
+  "engines": {
+    "node": "16.x"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
