--- a/package.json
+++ b/package.json
@@ -66,13 +66,14 @@
     "jest": "^27.1.0",
     "jest-serializer-vue": "^2.0.2",
     "lint-staged": "^10.3.0",
-    "node-sass": "^4.14.1",
+    "node-sass": "^7.0.1",
     "npm-check": "^5.9.2",
+    "postcss": "^8.4.14",
     "prettier": "^2.1.1",
     "prism-react-renderer": "^1.1.1",
     "prismjs": "^1.17.1",
     "sass": "^1.26.10",
-    "sass-loader": "^10.0.2",
+    "sass-loader": "^13.0.0",
     "sinon": "^9.0.3",
     "ts-jest": "^27.0.4",
     "typescript": "^4.6.4",
@@ -91,8 +92,7 @@
   },
   "lint-staged": {
     "*.{js,jsx,vue,ts,tsx}": [
-      "vue-cli-service lint",
-      "git add"
+      "vue-cli-service lint"
     ]
   }
 }
